# solitare-solver

./: CMakeLists.txt  README.md  requirements.txt
src/: CMakeLists.txt  main.cpp
src/solver/: CMakeLists.txt  solitare.cpp  solitare.hpp  solver.cpp  solver.hpp
src/utility/: CMakeLists.txt  reader.cpp  reader.hpp
